Baseurl update (again)

--- a/_layouts/artPost.html
+++ b/_layouts/artPost.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="break" style="height:200px"> </div>
 
-<img src="{{page.artPath}}" class="artPageImg">
+<img src="{{site.baseurl}}{{page.artPath}}" class="artPageImg">
 
 <div class="break"> </div>
 
@@ -16,7 +16,7 @@ layout: default
 <div class="artPageNav">
 <a href="{{page.artTwitter}}">
 <!--<img src="/assets/ui/twitter.png" class="artPageNavButton" style="float:left">-->
-<img src="/assets/ui/twitter.png" class="artPageNavButton" style="display: block; margin:auto">
+<img src="{{site.baseurl}}/assets/ui/twitter.png" class="artPageNavButton" style="display: block; margin:auto">
 </a>
 
 <!--<a href="{{page.artTwitter}}">
