--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,41 +2,41 @@
 <html lang="en">
 <head>
 
-<link rel="shortcut icon" href="/favicon.ico">
+<link rel="shortcut icon" href="{{site.baseurl}}/favicon.ico">
 
 <title>{{page.title}}</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/main.css">
 </head>
 <body onload="resizeFunction()" onresize="resizeFunction()">
 
 <div id="navBar" class="navBarBase">
 	<div id="navActiveZone" class="navBarActiveZone">
 		<a href="/">   
-		<img src="/assets/ghosttyrant_title.png" id="navTitle" class="navBarTitle">
+		<img src="{{site.baseurl}}/assets/ghosttyrant_title.png" id="navTitle" class="navBarTitle">
 		</a>
 		
 		<div id="navBarLinks" class="navBarLinkList">
 				
 				<a href="https://glitchgeist.itch.io/">
-					<img src="/assets/ui/itch.png" class= "navBarLinkItem">
+					<img src="{{site.baseurl}}/assets/ui/itch.png" class= "navBarLinkItem">
 				</a>
 				
 				<a href="https://twitter.com/GhostTyrant/">
-					<img src="/assets/ui/twitter.png" class= "navBarLinkItem">
+					<img src="{{site.baseurl}}/assets/ui/twitter.png" class= "navBarLinkItem">
 				</a>
 				
 				<a href="/about/">
-					<img src="/assets/ui/about.png" class= "navBarLinkItem">
+					<img src="{{site.baseurl}}/assets/ui/about.png" class= "navBarLinkItem">
 				</a>
 				
 				<a href="/">
-					<img src="/assets/ghost_icon.png" class= "navBarLinkHome">
+					<img src="{{site.baseurl}}/assets/ghost_icon.png" class= "navBarLinkHome">
 				</a>
 
 		</div>
 		
 		<a href="/">   
-		<img src="/assets/ghost_icon_outline.png" class="navIcon" id="navIcon">
+		<img src="{{site.baseurl}}/assets/ghost_icon_outline.png" class="navIcon" id="navIcon">
 		</a>
 	</div>
 </div>
