Home url update

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
 <div id="navBar" class="navBarBase">
 	<div id="navActiveZone" class="navBarActiveZone">
-		<a href="/">   
+		<a href="{{site.baseurl}}/">   
 		<img src="{{site.baseurl}}/assets/ghosttyrant_title.png" id="navTitle" class="navBarTitle">
 		</a>
 		
@@ -35,7 +35,7 @@
 
 		</div>
 		
-		<a href="/">   
+		<a href="{{site.baseurl}}/">   
 		<img src="{{site.baseurl}}/assets/ghost_icon_outline.png" class="navIcon" id="navIcon">
 		</a>
 	</div>
