--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,11 +25,11 @@
 					<img src="{{site.baseurl}}/assets/ui/twitter.png" class= "navBarLinkItem">
 				</a>
 				
-				<a href="/about/">
+				<a href="{{site.baseurl}}/about/">
 					<img src="{{site.baseurl}}/assets/ui/about.png" class= "navBarLinkItem">
 				</a>
 				
-				<a href="/">
+				<a href="{{site.baseurl}}/">
 					<img src="{{site.baseurl}}/assets/ghost_icon.png" class= "navBarLinkHome">
 				</a>
 
