Gallery/Blog navbar update + text link css
Updated the navbar icon for the gallery dropdown
Added the blog navbar icon (does not link to anything right now)

Added css for text links to match with blog, and added a font-weight specification for overlay text to prevent it going bold for some reason

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,13 +29,16 @@
 					<img src="{{site.baseurl}}/assets/ui/about.png" class= "navBarLinkItem">
 				</a>
 				
+				<a href="{{site.baseurl}}/">
+					<img src="{{site.baseurl}}/assets/ui/speech.png" class= "navBarLinkItem">
+				</a>
 
 				<div id="navDrop" class="navDropdown">			
-					  <img src="{{site.baseurl}}/assets/ui/eye.png" class= "navDropdown-Icon" id="navDropIcon">
+					  <img src="{{site.baseurl}}/assets/ui/photo.png" class= "navDropdown-Icon" id="navDropIcon">
 					
 					  <div class="navDropdown-Content">
-						<a href="{{site.baseurl}}/">Polished</a>
-						<a href="{{site.baseurl}}/sketch">Quick</a>
+						<a href="{{site.baseurl}}/" style="font-weight:normal">Polished</a>
+						<a href="{{site.baseurl}}/sketch" style="font-weight:normal">Quick</a>
 					</div>
 				</div
 				
