Updated blog navbar icon
Navbar icon now has a link to the blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 					<img src="{{site.baseurl}}/assets/ui/about.png" class= "navBarLinkItem">
 				</a>
 				
-				<a href="{{site.baseurl}}/">
+				<a href="https://blog.ghosttyrant.co.uk/">
 					<img src="{{site.baseurl}}/assets/ui/speech.png" class= "navBarLinkItem">
 				</a>
 
