--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,10 @@
 					<img src="{{site.baseurl}}/assets/ui/speech.png" class= "navBarLinkItem">
 				</a>
 
+				<a href="{{site.baseurl}}/project">
+					<img src="{{site.baseurl}}/assets/ui/games.png" class= "navBarLinkItem">
+				</a>
+
 				<div id="navDrop" class="navDropdown">			
 					  <img src="{{site.baseurl}}/assets/ui/photo.png" class= "navDropdown-Icon" id="navDropIcon">
 					
