Removed blog / Updated about icon / Updated footer dates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,6 @@
 					<img src="{{site.baseurl}}/assets/ui/about.png" class= "navBarLinkItem">
 				</a>
 				
-				<a href="https://blog.ghosttyrant.co.uk/">
-					<img src="{{site.baseurl}}/assets/ui/speech.png" class= "navBarLinkItem">
-				</a>
-
 				<a href="{{site.baseurl}}/project">
 					<img src="{{site.baseurl}}/assets/ui/games.png" class= "navBarLinkItem">
 				</a>
@@ -60,7 +56,7 @@
 </section>
 
 <div class="footer">
-  <p>© 2024 all rights reserved. Please don't repost my art.</p>
+  <p>© caspar 2020-present ★ do not repost my art</p>
 </div>
 
 
