2026 Overhaul / Palette update, font update, some other layout and asset updates

--- a/_layouts/artPost.html
+++ b/_layouts/artPost.html
@@ -6,17 +6,16 @@ layout: default
 
 <img src="{{site.baseurl}}{{page.artPath}}" class="artPageImg">
 
-<div class="break"> </div>
+<div class="break" style="height: 50px;"> </div>
 
-<div class="artPageText" style="font-size:40px">{{page.artTitle}}</div>
+<div class="artPageTitle" style="font-size:40px">{{page.artTitle}}</div>
 <div class="artPageText" style="font-size:35px">{{page.artDesc}}</div>
-<div class="artPageText" style="font-size:25px; padding-top:10px">{{page.artYear}}</div>
-
+<div class="artPageText" style="font-size:20px; padding-top:4px">{{page.artYear}}</div>
 
 <div class="artPageNav">
     <button class="artPageInfoButton" title="INFO"><img src="{{site.baseurl}}/assets/ui/speech.png" class="artPageInfoIcon"></button>
     <div class="artPageInfoBox">
-        <div class="artPageText" style="font-size:15px; color:#ababab;padding: 10px 10px">{{content}}</div>
+        <div class="artPageText" style="font-size:15px;padding: 10px 10px">{{content}}</div>
     </div>
 </div>
 
