--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 						<a href="{{site.baseurl}}/" style="font-weight:normal">Polished</a>
 						<a href="{{site.baseurl}}/sketch" style="font-weight:normal">Quick</a>
 					</div>
-				</div
+				</div>
 				
 				<a href="{{site.baseurl}}/">
 					<img src="{{site.baseurl}}/assets/ghost_icon.png" class= "navBarLinkHome">
@@ -51,9 +51,9 @@
 </div>
 
 
-<section>
+<div class="content">
       {{ content }}
-</section>
+</div>
 
 <div class="footer">
   <p>© caspar 2020-present ★ do not repost my art</p>
