--- a/_layouts/projectPost.html
+++ b/_layouts/projectPost.html
@@ -8,12 +8,12 @@ layout: default
 <div id="postContainer" class="postContainer">
 
 <img src="{{site.baseurl}}{{page.headerPath}}" class="postHeader">
-<div class="postMainText" style="font-size:40px;color:white;font-weight:bold;padding-top:15px">{{ page.artTitle }}</div>
-<div class="postMainText" style="font-size:15px;padding-bottom:5px">{{ page.monthYear }}</div>
+<div class="postMainTitle" style="font-size:40px;padding-top:15px">{{ page.artTitle }}</div>
+<div class="postMainText" style="font-size:15px;padding-bottom:5px; padding-top: 5px;">{{ page.monthYear }}</div>
 <div class="postMainText" style="font-size:12px;padding-bottom:20px"><b>Roles: </b>{{ page.projectRole }}</div>
 
 
-<div class="postBreak"> </div>
+<div class="postBreak">★</div>
 
 <div class="postMainText" style="font-size:15px;padding-bottom:15px">{{ content }}</div>
 
